add deep100 exec target (i think only the -twenty change is actually necessary)