@@ -69,6 +69,19 @@
                             </arguments>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>deep100</id>
+                        <configuration>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>--add-modules=jdk.incubator.vector</argument>
+                                <argument>-Xmx32G</argument>
+                                <argument>-ea</argument>
+                                <argument>com.github.jbellis.jvector.example.Deep100MWriter</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
